--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,33 +8,69 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
-  deploy:
+  terraform:
+    name: Terraform Apply
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.11.1
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Terraform Plan
-      run: terraform plan -out=tfplan
+      - name: Output Terraform Version
+        run: terraform -version
 
-    - name: Verify tfplan file
-      run: |
-        if [ ! -f tfplan ]; then
-          echo "tfplan file not found"
-          exit 1
-        fi
+      - name: Terraform Init
+        run: terraform init
 
-    - name: List files
-      run: ls -la
+      - name: Validate Terraform Configuration
+        run: terraform validate
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main'
-      run: terraform apply -input=false tfplan
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+
+      - name: List Directory Contents (Post-Plan)
+        run: ls -l
+
+      - name: Check if tfplan exists
+        id: check_tfplan
+        run: |
+          if [ -f "tfplan" ]; then
+            echo "tfplan exists" >> $GITHUB_ENV
+          else
+            echo "tfplan does not exist" >> $GITHUB_ENV
+            exit 1
+          fi
+
+      - name: Terraform Apply
+        if: env.tfplan == 'tfplan exists'
+        run: terraform apply -auto-approve tfplan
+
+      - name: List Directory Contents (Post-Apply)
+        run: ls -l
+
+      - name: Show Terraform Logs
+        if: failure() # Only runs if a step fails
+        run: |
+          echo "Terraform Plan Output:"
+          terraform show -no-color tfplan || echo "No tfplan file found"
+          echo "Terraform Apply Output:"
+          terraform show -no-color tfplan || echo "Failed to generate logs"
